<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.kamopos.hairdressingbeauty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.kamopos.hairdressingbeauty.widget.PagerSlidingTabStrip
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/white"
        app:pstsDividerColor="@android:color/transparent"
        app:pstsIndicatorColor="@android:color/holo_blue_light"
        app:pstsIndicatorHeight="2dp"
        app:pstsShouldExpand="true"
        app:pstsTabBackground="@drawable/background_tab"
        app:pstsUnderlineHeight="2dp"
        app:selectedTabTextColor="@android:color/holo_blue_light" />

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tabs" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/receivables"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/receivables" />

        <Button
            android:id="@+id/recharge"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recharge" />

        <Button
            android:id="@+id/exchange"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exchange" />

        <Button
            android:id="@+id/return_cards"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/return_cards" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:id="@+id/popup_data"
        android:src="@drawable/more_function" />

</RelativeLayout>